- Added method '/processstatus/{processInstanceId}' to PO dummy service.
