# controllers/PO.js
@@ -9,3 +9,7 @@ var PO = require('./POService');
 module.exports.executeProtectionConfiguration = function executeProtectionConfiguration (req, res, next) {
   PO.executeProtectionConfiguration(req.swagger.params, res, next);
 };
+
+module.exports.processStatus = function processStatus (req, res, next) {
+  PO.processStatus(req.swagger.params, res, next);
+}
